Fixing image bug on mobile

--- a/style.css
+++ b/style.css
@@ -101,19 +101,10 @@ a{
 	align-items: center;
 	justify-items: center;
 	grid-template-columns: 100fr;
-	grid-template-rows: 80fr 20fr;
+	grid-template-rows: 60fr 20fr 20fr;
 	grid-template-areas: "figure"
+						 "caption"
 						 "links";
-}
-.profile_box figure{
-	grid-area: figure;
-	display: grid;
-	height: 100%;
-	width: 100%;
-	align-items: center;
-	justify-items: center;
-	grid-template-columns: 100fr;
-	grid-template-rows: 75fr 25fr;
 }
 .profile_box img{
 	display: grid;
@@ -122,7 +113,7 @@ a{
  	border-radius: 50%;
 	border: 3px solid white;
 }
-.profile_box figcaption{
+.profile_box p{
 	color: white;
 	text-shadow: 2px 2px black;
 }
